--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -1,5 +1,7 @@
 .Position {
-  width: 10rem;
-  height: 3rem;
-  background: red;
+  width: 15rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
+
