--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -1,7 +1,13 @@
 .Position {
-  width: 15rem;
+  width: 15vw;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  
 }
 
+.SVG {
+  position: relative;
+  top: 3px;
+  left: 0; 
+}
