--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,9 +1,9 @@
 .Style {
   width: 100%;
-  height: 20vh;
-  background-color: black;
+  height: 10vh;
+  background-color: var(--main_black);
 }
 
 .Text {
-  color: white; 
+  color: rgb(254, 254, 254); 
 }
