--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,5 +1,18 @@
-.Layout {
+.Contact__layout {
+  position: fixed;
   width: 75%;
   height: 75vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border: 2px solid black;
+  border-radius: 5px;
+  background-color: white;
+  z-index: 10;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+ 
 } 
+
