--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -1,8 +1,35 @@
 .Content__main {
-  margin: 2.5rem 0 2.5rem 0;
+  margin: 3.75rem 0 2.75rem 0;
   height: auto;
-  width: 100%;
+  max-width: 95%;
   display: flex;
+  flex-wrap:wrap;
   justify-content: space-between;
-  border: 1px solid red;
 }
+
+.Line:nth-of-type(1) {
+  margin: 0 auto;
+  width: 90%;
+  height: .25px;
+  background-color: rgb(199, 199, 199);
+  transform: translateY(.75rem);
+}
+
+.Line:nth-of-type(2){
+  margin: 0 auto;
+  width: 95%;
+  height: .25px;
+  background-color: rgb(199, 199, 199);
+  transform: translateY(1.25rem);
+}
+
+.Line:nth-of-type(3){
+  margin: 0 auto;
+  width: 90%;
+  height: .25px;
+  background-color: rgb(199, 199, 199);
+  transform: translateY(1.75rem);
+}
+
+
+
