--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -1,10 +1,16 @@
-.Position {
-  width: 10rem;
-  height: 100%;
+.SVG__position {
+  width: 11.3rem;
+  height: 3.95rem;
   display: flex;
   align-items: center;
 }
 
-.SVG {
-  transform: translateY(10%); 
+.SVG__position svg {
+  transform: translateY(10%);
+  width: 100%;
+  height: 100%;
 }
+
+
+
+
