--- a/src/components/header/navigation/navigation.module.css
+++ b/src/components/header/navigation/navigation.module.css
@@ -1,9 +1,11 @@
-.Navigation__layout {
-  display: flex;
+.Navigation__container {
+  width: 800px;
+  max-width: 100%;
   height: 20vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex: wrap;
 }
 
 .Navigation__list {
@@ -16,6 +18,7 @@
 }
 
 .Navigation__list li  {
+  display: inline;
   letter-spacing: none;
   padding: .75rem .75rem;
 }
@@ -25,7 +28,7 @@ li:last-child  {
 }
 
 li:first-child {
-  padding: .75rem .75rem .75rem 0;
+  padding: .75rem .75rem .75rem .75rem;
 }
 
 
@@ -34,7 +37,9 @@ li:first-child {
   color: var(--main_black);
   font-size: 1rem;
   font-weight: 500;
+  display: inline-block;
 }
+
 
 
 
