--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -1,10 +1,19 @@
 .Content__main {
-  margin: 3.75rem 0 2.75rem 0;
-  height: auto;
-  max-width: 100%;
+  margin: 1rem auto;
+  max-width: 800px;
   display: flex;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.Lines {
+  height: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 
 .Line:nth-of-type(1) {
@@ -12,7 +21,7 @@
   width: 90%;
   height: .25px;
   background-color: rgb(199, 199, 199);
-  transform: translateY(.75rem);
+  
 }
 
 .Line:nth-of-type(2){
@@ -20,7 +29,7 @@
   width: 95%;
   height: .25px;
   background-color: rgb(199, 199, 199);
-  transform: translateY(1.25rem);
+ 
 }
 
 .Line:nth-of-type(3){
@@ -28,7 +37,6 @@
   width: 90%;
   height: .25px;
   background-color: rgb(199, 199, 199);
-  transform: translateY(1.75rem);
 }
 
 
