--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -1,15 +1,17 @@
-.SVG__position {
-  width: 11.3rem;
-  height: 3.95rem;
-  display: flex;
+.Logo {
+  width: 8.5rem;
+  height: auto;
+  display: flex; 
   align-items: center;
+  border: 1px solid red;
 }
 
-.SVG__position svg {
-  transform: translateY(10%);
-  width: 100%;
-  height: 100%;
+
+.Logo img {
+  max-width: 100%;
+  height: auto;
 }
+
 
 
 
