lines section added

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,8 +1,7 @@
 .Header__main {
   min-height: auto;
-  margin: 0 auto .5rem auto;
-  border: 1px solid red;
-  max-width: 960px;
+  margin: 0  auto;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
 
@@ -11,3 +10,4 @@
 .Header__layout img {
   max-width: 100%;
 }
+
