--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -1,15 +1,15 @@
 .Logo {
-  width: 8.5rem;
-  height: auto;
+  width: 10.25rem;
+  height: 3.75rem;
   display: flex; 
   align-items: center;
-  border: 1px solid red;
 }
 
 
 .Logo img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  transform: translateY(8.5%);
 }
 
 
