--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -1,43 +1,24 @@
 .Content__main {
-  margin: 1rem auto;
-  max-width: 800px;
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto 2rem auto;
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
-.Lines {
-  height: 1rem;
-  width: 100%;
+.Content__container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: space-between;
-  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
-.Line:nth-of-type(1) {
-  margin: 0 auto;
-  width: 90%;
-  height: .25px;
-  background-color: rgb(199, 199, 199);
-  
-}
 
-.Line:nth-of-type(2){
-  margin: 0 auto;
-  width: 95%;
-  height: .25px;
-  background-color: rgb(199, 199, 199);
- 
-}
 
-.Line:nth-of-type(3){
-  margin: 0 auto;
-  width: 90%;
-  height: .25px;
-  background-color: rgb(199, 199, 199);
-}
+
+
+
 
 
 
