--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -2,9 +2,7 @@
   width: 800px;
   max-width: 100%;
   margin: 0 auto 2rem auto;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  height: auto;
 }
 
 .Content__container {
