--- a/src/components/podcastTemplate/podcastTemplate.module.css
+++ b/src/components/podcastTemplate/podcastTemplate.module.css
@@ -11,9 +11,8 @@
   height: 20vh;
   display: flex;
   justify-content: center;
+  margin-bottom: 6rem;
 }
-
-
 
 .Template__text {
   margin: 0 auto;
