--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -1,7 +1,7 @@
 .Content__main {
   width: 800px;
   max-width: 100%;
-  margin: 0 auto 2rem auto;
+  margin: 3rem auto 2rem auto;
   height: auto;
 }
 
