--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,28 +1,40 @@
 
+.Navigation__nav_main {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
 
-
-.Navigation__main, .Navigation__container{
+.Navigation__container {
+  width: 840px; 
+  padding:0 20px;
+  background-color: var(--main_white);
   min-height: 15vh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
   flex-direction: column;
-  margin-bottom: 3rem;
+  transition: 0.2s;
 }
 
-.Navigation__container {
-  width: 960px;
-  max-width: 100%;
-  margin: 0 auto;
-  height: auto;
-  padding: 1rem 0;
+.Navigation__container.Scroll {
+-webkit-box-shadow: 0px 7px 8px -1.95px rgba(189, 189, 189, 0.75);
+-moz-box-shadow: 0px 7px 8px -1.95px rgba(189, 189, 189, 0.75);
+box-shadow: 0px 7px 8px -1.95px rgba(189, 189, 189, 0.75);
 }
+
+
 
 .Navigation__nav_main ul {
   height: auto;
   text-align: center;
-
   display: flex;
   flex-direction: column;
   margin-top: 1.5rem;
@@ -34,9 +46,6 @@
   padding: .75rem 0;
 }
 
-
-
-
 .Navigation__nav_main a {
   text-decoration: none;
   color: var(--main_black);
@@ -46,7 +55,7 @@
 }
 
 @media (min-width: 1005px) {
-  .Navigation-main, .Navigation__container {
+  .Navigation__container {
     justify-content: space-between;
   }
   .Navigation__nav_main ul {
@@ -55,7 +64,7 @@
 }
 
 @media(min-width: 600px) {
-  .Navigation__main, .Navigation__container  {
+ .Navigation__container  {
     flex-direction: row;
   }
   .Navigation__nav_main ul {
