--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -1,7 +1,7 @@
 .Content__main {
   width: 800px;
   max-width: 100%;
-  margin: 3rem auto 2rem auto;
+  margin: 3rem auto 0 auto;
   height: auto;
 }
 
@@ -10,6 +10,7 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
+  padding-bottom: 2rem;
 }
 
 @media(min-width: 320px){
