--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,6 +5,8 @@
 --main_font: 'Roboto', 'sans-serif';
 --button_border: #BE0000;
 --button_background: #FF7C7C;
+--main_white: #fafafa;
+--main_grey: rgb(230, 230, 230);
 }
 
 
@@ -18,7 +20,7 @@ body {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  background-color: var(--main_grey);
 }
 
 
