--- a/src/components/SVGContainer/SVGContainer.module.css
+++ b/src/components/SVGContainer/SVGContainer.module.css
@@ -14,20 +14,21 @@
   transition: linear .4s;
 }
 
-.Resize img {
+.Image_resize {
   max-width: 100%;
   height: 100%;
   transition: linear .4s;
 }
 
 
-.Logo img {
+.Image {
   max-width: 100%;
   height: 100%;
   transform: translateY(7.5%);
   transition: linear .3s;
-  
 }
+
+
 
 
 
