--- a/src/components/podcastTemplate/podcastTemplate.module.css
+++ b/src/components/podcastTemplate/podcastTemplate.module.css
@@ -1,21 +1,51 @@
 .Template__layout {
   max-width: 640px;
-  padding: 0 2.5vw 0 2.5vw;
-  margin: 0 auto 4rem auto;
+  padding: 0 2.5vw 1rem 2.5vw;
+  margin: 0 auto;
   background-color: var(--main_white);
+  padding-top: 3rem;
 }
 
 .Template__layout a {
-  margin: 2rem 0;
+  margin: 0 auto;
 }
 
 .Header__layout {
-  height: 20vh;
+  margin:  0 auto;
+  padding: 2rem;
+  height: 8rem;
+  max-width: 640px;
   display: flex;
   justify-content: center;
-  margin-bottom: 6rem;
+  align-items: center;
+  background-color: var(--main_white);
+  transition: linear .2s;
 }
 
-.Template__text {
-  margin: 0 auto;
+.Header__layout.Scroll {
+   height: 4.75rem;
+   width: 640px;
+   padding: 0;
+   -webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+-moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+position: fixed;
+top: 0;
+left: 50%;
+margin-left: -320px;
+transition: linear .2s;
+}
+
+.header__layout.Scroll {
+  margin: 0 0 2rem auto;
+} 
+  
+
+
+.Template__text p:nth-of-type(2) {
+  margin: 0;
+}
+
+.Podcast__player {
+  margin: 1rem 0 0 auto;
 }
