--- a/src/components/podcastTemplate/podcastTemplate.module.css
+++ b/src/components/podcastTemplate/podcastTemplate.module.css
@@ -1,9 +1,9 @@
 .Template__layout {
   max-width: 640px;
-  padding: 0 2.5vw 1rem 2.5vw;
+  height: 100%;
+  padding: 11rem 1rem 3.5rem 1rem;
   margin: 0 auto;
   background-color: var(--main_white);
-  padding-top: 3rem;
 }
 
 .Template__layout a {
@@ -11,36 +11,34 @@
 }
 
 .Header__layout {
-  margin:  0 auto;
-  padding: 2rem;
+  margin: 0 auto;
   height: 8rem;
-  max-width: 640px;
+  width: 640px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--main_white);
-  transition: linear .2s;
+  transition: ease 0.2s;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  margin-left: -320px;
 }
 
 .Header__layout.Scroll {
-   height: 4.75rem;
-   width: 640px;
-   padding: 0;
-   -webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
--moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
-position: fixed;
-top: 0;
-left: 50%;
-margin-left: -320px;
-transition: linear .2s;
+  height: 4.25rem;
+  width: 640px;
+  -webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+  -moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+  box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
+  transition: ease 0.4s;
+  border-bottom: .25px solid rgb(201, 201, 201);
 }
 
-.header__layout.Scroll {
-  margin: 0 0 2rem auto;
-} 
-  
-
+.Template__text {
+  margin: 0;
+  padding: 0;
+}
 
 .Template__text p:nth-of-type(2) {
   margin: 0;
