--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -3,9 +3,9 @@
   margin-bottom: 2rem;
 }
 
-.PodcastElement__container  {
-display: flex;
-flex-direction: column;
+.PodcastElement__container {
+  display: flex;
+  flex-direction: column;
 }
 
 .PodcastElement__image_container {
@@ -13,15 +13,14 @@ flex-direction: column;
   height: 8rem;
   margin-bottom: 0;
   background-image: url("../../assets/images/kot-opowiesc-o-konstantym-a-jeleskim.jpg");
-  background-origin: content-box;
+  background-size: 110%;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: right center;
+  background-position: 100% 40%;
 }
 
 .PodcastElement__content {
   width: 100%;
-  height:auto;
+  height: auto;
   font-weight: 600;
   margin-bottom: 0.125rem;
 }
@@ -29,7 +28,7 @@ flex-direction: column;
 .PodcastElement__content a {
   text-decoration: none;
   color: var(--man_black);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .PodcastElement__content a:hover {
@@ -38,32 +37,28 @@ flex-direction: column;
 
 .Podcast__content_title {
   width: 100%;
-  display: flex; 
+  display: flex;
   justify-content: flex-start;
-  font-size: 1rem;
+}
+
+.Podcast__content_title h5 {
+  font-size: calc(0.9rem - 15%);
 }
 
 .Podcast__content_title a {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
-
-.PodcastElement__content p:first-of-type {
+.PodcastElement__content p {
   margin-top: 0;
   color: var(--second_grey);
   font-weight: 500;
 }
 
-.PodcastElement__content h1 {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-}
-
-.PodcastElement__content p {
-  font-size: 0.75rem;
-  margin-bottom: 1rem;
-  font-weight: 300;
-  line-height: 1.125rem;
+.PodcastElement__content_top p {
+  font-size: calc(0.8rem - 20%);
+  font-weight: 500;
+  margin-bottom: 0;
 }
 
 .PodcastElement__content h1 span {
@@ -76,13 +71,13 @@ flex-direction: column;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: .35rem;
+  margin-bottom: 0.1rem;
 }
 
-.PodcastElement__content_top p {
-  font-size: 0.75rem;
-  font-weight: 400;
-  margin-bottom: 0;
+.PodcastElement__content_description {
+  font-size: calc(0.85rem - 15%);
+  line-height: 0.9rem;
+  margin-bottom: .25rem;
 }
 
 .PodcastElement__content_listen {
@@ -91,9 +86,9 @@ flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding-bottom: 1rem;
-  border-bottom: 2px solid var(--main_black);
+  border-bottom: 1.5px solid var(--main_black);
+  padding-bottom: .5rem;
 }
-
 .PodcastElement__content_listen div {
   width: 65%;
   display: flex;
@@ -101,17 +96,20 @@ flex-direction: column;
 }
 
 .PodcastElement__content_listen div p {
-  margin: 0 .75rem 0 0;
+  margin: 0 0.5rem 0 0;
+  font-size: .75rem;
+  font-weight: 500;
 }
 
-.PodcastElement__content_listen svg:nth-of-type(2)  {
+.PodcastElement__content_listen svg:nth-of-type(2) {
   cursor: pointer;
 }
 
-.PodcastElement__content_listen a  {
-  transform: translateY(-1%);
+.PodcastElement__content_listen a {
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
 }
-
 .PodcastElement__content_listen a p {
-text-transform: lowercase;
-} 
+  text-transform: lowercase;
+}
