--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -12,7 +12,7 @@
   z-index: 2;
 }
 
-.Navigation__container {
+.Navigation__container{
   height: 100%;
   padding: 1rem 1.25rem 0 1.25rem;
   width: 100%; 
@@ -23,6 +23,13 @@
   flex-wrap: wrap;
   flex-direction: column;
   transition: 0.2s;
+  position: absolute;
+}
+
+.Modal__contact {
+  position: absolute;
+  top: 72.5%;
+  left: 65.5%;
 }
 
 .Navigation__container.Scroll {
