--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,3 @@
-
-
 :root {
 --main_black: #272727;
 --main_font: 'Roboto', 'sans-serif';
@@ -10,11 +8,11 @@
 --second_grey: rgb(85, 85, 85);
 }
 
-
 html {
   font-family: var(--main_font);
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color:var(--main_black);
 }
 body {
   margin: 0;
