--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,11 +1,12 @@
 .Footer__main {
   width: 100%;
   height: auto;
+  min-height: 3rem;
   background-color: var(--main_black);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .Footer__container_normal {
@@ -24,11 +25,12 @@
   height: 75%;
   display: flex; 
   align-items: center;
-  justify-content: center;
-  border: 1.75px solid white;
+  justify-content: flex-end;
   border-top: none;
   padding: .4rem 0 0.4rem .4rem;
 }
+
+
 
 .Footer__logo {
   width: 50%;
@@ -60,6 +62,7 @@
 }
 
 .Footer__logo_socialMedia {
+  padding: .5rem auto;
   width: 3rem;
   display: flex;
   justify-content: space-between;
