--- a/src/components/ministry/ministry.module.css
+++ b/src/components/ministry/ministry.module.css
@@ -1,10 +1,17 @@
 .Ministry__layout {
-  height: 7.25rem;
-  background-color: #919BA2;
-  text-align: center;
+  margin-top: 2.5rem;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Ministry__layout img {
-  height: 100%;
-  text-align: center;
+  width: 10rem;
+}
+
+.Ministry__layout p {
+  margin-top: 1.5rem;
+  text-align: left;
+  font-size: calc(.85rem - 15%);
 }
