--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -47,10 +47,10 @@ div.Close:hover {
 
 .Close:before, .Close:after {
   position: absolute;
-  right: .75rem;
-  top: .25rem;
+  right: .55rem;
+  top: .235rem;
   content: ' ';
-  height: 1rem;
+  height: .75rem;
   width: 2px;
   background-color: black;
 }
@@ -61,7 +61,7 @@ div.Close:hover {
   transform: rotate(-45deg);
 }
 
-.Contact__layout div:nth-of-type(2) p {
+.Contact__layout div:nth-of-type(2n) p {
   transform: translateY(-25%);
   margin: 0;
 }
