--- a/src/components/ministry/ministry.module.css
+++ b/src/components/ministry/ministry.module.css
@@ -1,17 +1,23 @@
 .Ministry__layout {
-  margin-top: 2.5rem;
+  margin: 1.5rem 0 1.5rem 0;
   height: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
+  
 }
+
+
 
 .Ministry__layout img {
   width: 10rem;
+  margin-right: 1rem;
 }
 
 .Ministry__layout p {
-  margin-top: 1.5rem;
+  max-width: 40%;
+  margin-bottom: 0;
   text-align: left;
-  font-size: calc(.85rem - 15%);
+  font-size: calc(.85rem - 25%);
+  font-weight: bold;
+  line-height: .75rem;
 }
