--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -4,8 +4,7 @@
   border: 1px solid var(--main_black);
   border-radius: 1px;
   background-color: white;
-  z-index: 4;
-  text-align: center;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,6 +12,9 @@
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
+  position: absolute;
+  top: 60%;
+  right: 1.25%;
 }
 
 .Contact__layout div:nth-of-type(1n){
@@ -62,7 +64,7 @@ div.Close:hover {
 }
 
 .Contact__layout div:nth-of-type(2n) p {
-  transform: translateY(-25%);
+  transform: translateY(-22.5%);
   margin: 0;
 }
 
