--- a/src/components/mainSection/mainSection.module.css
+++ b/src/components/mainSection/mainSection.module.css
@@ -3,18 +3,11 @@
   height: 100%;
   width: 100%;
   background-color: var(--main__white);
+  position: relative;
+  
 }
 
-.MainSection__ministry {
-  text-align: center;
-  height: 5.5rem;
-  width: 100%;
-  background-color: #919BA2;
-}
 
-.MainSection__ministry img {
-  height: 100%;
-}
 
 @media(min-width: 600px){
   .MainSection__layout {
