--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -13,15 +13,15 @@
 }
 
 .Navigation__container{
-  margin-top: 1rem;
+  margin-top: .5rem;
   height: 100%;
   width: 100%; 
-  padding: .5rem 1rem .1rem 1rem;
+  padding: 0 1rem .1rem 1rem;
   background-color: var(--main_white);
   display: flex;
   align-items: center;
   justify-content: space-around;
-  transition: .2s;
+  transition: ease .3s;
 }
 
 .Navigation__container svg {
@@ -41,12 +41,12 @@
 .Navigation__container.Scroll {
 margin-top: 0;
 height: 40%;
-padding: .25rem 1rem .5rem 1rem;
+padding: 0 1rem .5rem 1rem;
 -webkit-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
 -moz-box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
 box-shadow: 0px 6px 7px -1.95px rgba(189, 189, 189, 0.75);
 border-bottom: .5px solid rgb(201, 201, 201);
-transition: .1s;
+transition: ease .1s;
 }
 
 .Navigation__nav_main ul {
